--- a/src/pages/Customers.css
+++ b/src/pages/Customers.css
@@ -15,7 +15,9 @@ h2 {
 .menu-container {
   position: relative;
 }
-
+button.menu-button{
+  color: black;
+}
 .menu-button {
   background: none;
   border: none;
@@ -35,6 +37,7 @@ h2 {
 
 .menu-dropdown button {
   display: block;
+  color: #888;
   width: 100%;
   padding: 10px;
   text-align: left;
